<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:paddingBottom="20dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingTop="20dp"
    >

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorBackground"
        android:gravity="center"
        android:orientation="vertical"

        >

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:gravity="center_vertical"
            android:text="@string/text_title"
            android:textSize="24sp" />

    </android.support.v7.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="150dp"

            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Ip Address:"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Ip Address:" />

        <EditText
            android:id="@+id/tf_ip_address"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="192.168.1.100" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatDownloadReader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/text_download"
        android:textColor="@color/colorPopup" />


    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnSaveReadersToPhone"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:text="@string/text_save_to_phone"
        android:textColor="@color/colorPopup" />


</LinearLayout>

